k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: piggybank
  labels:
    app.kubernetes.io/name: piggybank
    app.kubernetes.io/part-of: piggybank
